[gd_scene load_steps=2 format=3 uid="uid://cfdlfik0mbnyl"]

[ext_resource type="Script" path="res://Scenes/Menus/MainMenu/main_menu.gd" id="1_helyg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_helyg")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 43.0
offset_right = 384.0
offset_bottom = 74.0
text = "New game
"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 285.0
offset_top = 128.0
offset_right = 384.0
offset_bottom = 159.0
disabled = true
text = "Load Game
"

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 291.0
offset_top = 199.0
offset_right = 384.0
offset_bottom = 230.0
disabled = true
text = "Credits
"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 243.0
offset_right = 383.0
offset_bottom = 274.0
text = "Quit
"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
